--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.3
   agora_rtc_engine: ^6.3.1
   permission_handler: ^8.1.1
+  proximity_sensor: ^1.3.1
+  proximity_screen_lock: ^1.1.0
 
 dev_dependencies:
   flutter_test:
