--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   permission_handler: ^8.1.1
   proximity_sensor: ^1.3.1
   proximity_screen_lock: ^1.1.0
+  signalr_netcore: ^1.3.7
+  firebase_core: ^2.31.1
+  firebase_messaging: ^14.9.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
